<resources>
    <string name="app_name">Pokemonapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="signup">Registrarse</string>
    <string name="login">Login</string>
    <string name="signup_title">Nuevo usuario</string>
    <string name="email_hint">Correo electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="signup_button">Registrarse</string>
    <string name="login_button">Iniciar sesion</string>
    <string name="title_activity_pokemon">PokemonActivity</string>
    <string name="title_regions">Pokemon Regions</string>
    <string name="title_teams">My Teams</string>
    <string name="title_pokedex">Pokedex List</string>
    <string name="title_pokemon">Pokemon List</string>
    <string name="title_teamdetails">Team Information</string>
    <string name="title_notifications">Notifications</string>
</resources>