<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.pokemonapp.ui.sigin.SignInFragment"
        android:label="@string/login"
        tools:layout="@layout/sigin_fragment" >
        <action
            android:id="@+id/action_nav_login_to_nav_signup"
            app:destination="@id/nav_signup" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pokemonapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.pokemonapp.ui.signup.SignUpFragment"
        android:label="@string/signup"
        tools:layout="@layout/signup_fragment" />

</navigation>