<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_regions">

    <fragment
        android:id="@+id/navigation_regions"
        android:name="com.example.pokemonapp.ui.home.HomeFragment"
        android:label="@string/title_regions"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_regions_to_navigation_pokemons"
            app:destination="@id/navigation_pokedex" >
        <argument
            android:name="regionName"
            app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.example.pokemonapp.ui.team.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams"/>

    <fragment
        android:id="@+id/navigation_pokedex"
        android:name="com.example.pokemonapp.ui.pokedexlist.PokedexlistFragment"
        android:label="@string/title_pokedex"
        tools:layout="@layout/fragment_pokedex">
        <argument
            android:name="regionName"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_pokedex_to_navigation_pokemons"
            app:destination="@id/navigation_pokemons">
            <argument
                android:name="regionName"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_pokemons"
        android:name="com.example.pokemonapp.ui.pokemonlist.PokemonlistFragment"
        android:label="@string/title_pokemon"
        tools:layout="@layout/fragment_pokemonlist">
        <argument
            android:name="pokedexName"
            app:argType="string" />
    </fragment>

</navigation>